fix: clients logos horizontal alignment in good hands shortcode (#1139)

--- a/assets/styles/shortcodes/Clients.scss
+++ b/assets/styles/shortcodes/Clients.scss
@@ -31,6 +31,11 @@
 		height: 25px;
 	}
 
+	.Reviews & {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	@media (max-width: $breakpoint-mobile) {
 
 		&__item {
